v3.6.8
- Improvement: Added WPML translation support for all customizer's strings through wpml-config.xml file.
- Fix: Bulk action selection not working on any WordPress list table when theme's "Get Started" notice is active.
- Fix: Header Footer Widgets: Off-canvas content is displaying over Legacy widget's preview in the customizer for WordPress 5.8.
- Deprecated: Header Footer Widgets - Deprecated design specific options for better compatibility with WordPress 5.8. ( Needs Doc )

v3.6.7
- Improvement: Rendered Addon dependent toggle code conditionally and removed unwanted code.
- Improvement: Changed the screen reader text tag from 'h2' to 'span' for better SEO.
- Fix: Changing Off-canvas flyout close button color not reflecting on frontend.
- Fix: Broken layout WooCommerce Shop/Archive page on mobile view when using elementor template or Product archive widget.
- Fix: Next and Previous pagination button is not aligned with page numbers for mobile view.
- Fix: Added dynamic breakpoint support for the responsive view of the sidebar and main content.
- Fix: Heading color h1-h6 of customizer not working in the Gutenberg editor.
- Fix: Global headings font family not working in the Gutenberg editor.
- Fix: Footer Builder - Widgets - Right margin space not working. ( https://wpastra.com/docs/fix-footer-widget-right-margin/ )
- Fix: Search icon color is not applying to the Standard and Transparent Header Search Box style.
- Fix: Removed the spacing applied for the menu items in the customizer section.
- Fix: Builder - WooCommerce & EDD cart - Cart and Checkout buttons not visible when multiple products added to cart flyout.
- Fix: Builder - Social Icons - Tiktok icon not appearing in customizer and on frontend.
- Fix: 'Disable Footer' option is missing in Page meta settings for new Header Footer builder.
- Fix: Removed 'Disable Footer Widgets' option in Page meta settings for new Header Footer builder.
- Fix: Sidebar block editor width changes on the widgets page.